<resources>
    <string name="app_name">PhotosAndroid07</string>
    <string name="top_bar_label">Photos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_button_text">Open</string>
    <string name="delete_button_text">Delete</string>
    <string name="create_button_text">Create</string>
    <string name="rename_button_text">Rename</string>
    <string name="search_button_text">Search all photos...</string>
    <string name="all_photos_in_the_current_album_desc">All photos in the current album</string>
    <string name="add_button_text">Add</string>
    <string name="previous_button_text">Previous</string>
    <string name="next_button_text">Next</string>
    <string name="default_filename_text">(No filename)</string>
    <string name="people_text_view_text">People</string>
    <string name="location_text_view_text">Location</string>
    <string name="clear_button_text">Clear</string>
    <string name="location_tag_default_text">(No location value specified)</string>
    <string name="empty_location_tag_text">(No location tag specified)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="move_button_text">Move</string>
    <string name="open_selected_photo_button_text">Open selected photo...</string>
</resources>