<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/add_location_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_button_text"
            android:textAllCaps="false"
            app:icon="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/clear_tag_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_button_text"
            android:textAllCaps="false"
            app:icon="@android:drawable/ic_delete"
            app:iconGravity="end" />
    </LinearLayout>

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_location_tag_text"
        android:textAlignment="center" />

</LinearLayout>