<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".PhotoFragment">

    <TextView
        android:id="@+id/filename_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/default_filename_text"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        tools:src="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <Button
                android:id="@+id/previous_photo_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous_button_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:icon="@android:drawable/ic_media_rew" />

            <Button
                android:id="@+id/next_photo_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_button_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:icon="@android:drawable/ic_media_ff"
                app:iconGravity="start|textStart" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/tags_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_location_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_button_text"
                        android:textAllCaps="false"
                        app:icon="@android:drawable/ic_input_add"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/location_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location_text_view_text"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/clear_location_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear_button_text"
                        android:textAllCaps="false"
                        app:icon="@android:drawable/ic_delete"
                        app:iconGravity="end" />

                </LinearLayout>

                <TextView
                    android:id="@+id/location_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/location_tag_default_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_people_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_button_text"
                        android:textAllCaps="false"
                        app:icon="@android:drawable/ic_input_add" />

                    <TextView
                        android:id="@+id/people_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/people_text_view_text"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/delete_people_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete_button_text"
                        android:textAllCaps="false"
                        app:icon="@android:drawable/ic_delete"
                        app:iconGravity="end" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>